--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,10 @@ services:
     depends_on:
       - mongo_server
     ports:
-      - 80:80
-      - 8080:8080
-      - 8081:8081
+      - 18080:18080
     environment:
       MONGODB_URL: mongodb://mongo_server:27017/docstore
-      APIKEY: eca4da50d2a16asd448805b452ccaea7
+      SIGNKEY: random
   mongo_server:
     restart: always
     image: mongo
